
set(XERCESC_VERSION "3.2.2")

set(XERCESC_URL https://github.com/apache/xerces-c/archive/v${XERCESC_VERSION}.tar.gz)
set(XERCESC_HASH "4d43a316a3464be272996960f592bdd166f82235")

ExternalProject_Add(xercesc
  URL ${XERCESC_URL}
  URL_HASH SHA1=${XERCESC_HASH}
  CMAKE_CACHE_ARGS
  INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/install
  -DCMAKE_INSTALL_PREFIX:PATH=<INSTALL_DIR>
  -DCMAKE_CXX_STANDARD:STRING=${CMAKE_CXX_STANDARD}
  DOWNLOAD_EXTRACT_TIMESTAMP ON
)

ExternalProject_Get_property(xercesc INSTALL_DIR)
install( DIRECTORY "${INSTALL_DIR}/" DESTINATION .)
